--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,3 @@
-
-
 body {
     font-family: 'Comic Neue', cursive;
     margin: 0;
@@ -7,7 +5,7 @@ body {
     color: rgba(5, 5, 5, 0.5);
     word-wrap: break-word;
     overflow-wrap: break-word;
-  }
+}
 
 .wrapper{
     width: 100%;
@@ -37,7 +35,7 @@ section.module:last-child{
 
 section.module.content{
     padding: 40px 0;
-    background: rgb(185, 175, 163);
+    background-color: rgb(139, 131, 121);
 }
 
 section.module.parallax{
@@ -55,7 +53,7 @@ section.module.parallax{
 }
 
 section.module.parallax-1{
-    background-image: url("/img/_Escola\ Munic.jpg");
+    background-image: url("../img/_Escola\ Munic.jpg");
 
 }
 
@@ -65,7 +63,45 @@ section.module.parallax h1{
     font-size: 80px;
 }
 
-
 .area-1{
     visibility: hidden;
+}
+
+#histórica {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-area-1 {
+    display: flex;
+    width: 90%;
+}
+
+.container-area-1-historia {
+    text-align: center;
+    width: 50%;
+    background: rgb(185, 175, 163);
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    padding-left: 2%;
+    padding-top: 2%;
+}
+
+.container-area-1-images {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    background: rgb(185, 175, 163);
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+}
+
+.container-area-1-images-files {
+    width: 85%;
+    height: 45%;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px rgba(20, 19, 18, 0.7);
 }
