Adicionado animação no container.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,7 +72,7 @@ section.module.parallax h1{
     justify-content: center;
 }
 
-.container-area-1 {
+#histórica-container{
     text-align: center;
     width: 90%;
     padding: 2%;
