--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,3 +80,18 @@ section.module.parallax h1{
     border-radius: 30px;
     box-shadow: 5px 5px 15px rgba(34, 32, 30, 0.7);
 }
+
+.blur {
+    position: relative;
+    overflow: hidden;
+}
+
+.blur::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    background: linear-gradient(to top, rgba(70, 64, 64, 0.8), transparent);
+}
