--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,12 +1,22 @@
 html {
-    --primary: rgb(225, 55, 90);
-    --secondary: rgb(255, 155, 175);
+    --primary: rgb(55, 134, 225);
+    --secondary: rgb(155, 182, 255);
     scroll-behavior: smooth;
 }
 
 html::selection {
     background-color: var(--primary);
     color: rgb(255, 255, 255);
+}
+
+#modalComunicado.show {
+    display: flex;
+    animation: fadeIn 0.2s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0 }
+    to { opacity: 1 }
 }
 
 .nav-bar-links:hover {
@@ -22,12 +32,12 @@ html::selection {
 }
 
 .swiper-pagination-bullet {
-    background-color: rgb(255, 155, 175);
+    background-color: rgb(155, 182, 255);
     opacity: 1;
 }
 
 .swiper-pagination-bullet-active {
-    background-color: rgb(225, 55, 90);
+    background-color: rgb(55, 134, 225);
 }
 
 @keyframes fade-in {
@@ -51,4 +61,54 @@ html::selection {
 
 .animate-fade-in-3 {
     animation: fade-in 1s ease-out 0.8s forwards;
+}
+
+@media (max-width: 640px) {
+    .fc .fc-button {
+        padding: 0.25rem 0.5rem;
+        font-size: 0.60rem;
+        line-height: 1rem;
+    }
+
+    .fc .fc-toolbar-title {
+        font-size: 1rem;
+    }
+}
+
+.fc-daygrid-day {
+    background-color: rgb(255, 255, 255);
+}
+
+.fc-daygrid-day:hover {
+    background-color: var(--secondary);
+    cursor: pointer;
+    box-shadow: inset 0 0 0 2px var(--primary);
+    border-radius: 0.375rem;
+}
+
+.fc-list-event-time {
+    display: none !important;
+}
+
+.fc-list-event:hover {
+    background-color: #fdecea;
+    color: var(--primary);
+    cursor: pointer;
+}
+
+.fc .fc-button {
+    background-color: var(--primary);
+    color: white;
+    border: none;
+    font-weight: 600;
+    border-radius: 0.5rem;
+    transition: background-color 0.3s ease;
+}
+
+.fc .fc-button:hover {
+    background-color: var(--secondary);
+}
+
+.fc .fc-button.fc-button-active {
+    background-color: var(--primary);
 }
