--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -90,8 +90,26 @@ html::selection {
     display: none !important;
 }
 
+.fc-toolbar-title {
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+.fc-list-day-cushion a {
+    font-weight: bold;
+    font-size: 1.25rem;
+    background-color: #ffffff;
+    padding: 0.75rem 1rem;
+    border-radius: 0.5rem;
+    display: block;
+}
+
+.fc-list-event {
+    background-color: #ffffff;
+}
+
 .fc-list-event:hover {
-    background-color: #fdecea;
+    background-color: #ffffff;
     color: var(--primary);
     cursor: pointer;
 }
