--- a/public/styles/admin/post.css
+++ b/public/styles/admin/post.css
@@ -61,6 +61,17 @@ label {
     border: none;
 }
 
+.btn-green {
+    background-color: rgb(26, 163, 21) !important;
+    border: none;
+    color: white;
+}
+
+.btn-green:hover {
+    background-color: rgb(15, 83, 13) !important;
+    color: white;
+}
+
 .btn-success:hover {
     background-color: var(--primary) !important;
 }
